fix multiselect not rendering

--- a/packages/search/stats-widget-browser.html
+++ b/packages/search/stats-widget-browser.html
@@ -2638,7 +2638,7 @@ main {
     </script>
     <script>
       const chartParameters = {};
-      const data = {"version":1,"tree":{"name":"index.min.js","children":[{"name":"package.json","uid":"88b2-0"},{"name":"src","children":[{"name":"widget.js","uid":"88b2-1"}]}]},"nodes":{"88b2-0":{"renderedLength":58,"gzipLength":1127,"id":"package.json"},"88b2-1":{"renderedLength":544,"isEntry":true,"gzipLength":351,"id":"src/widget.js"},"88b2-2":{"renderedLength":0,"isExternal":true,"gzipLength":0,"id":"@scbd/self-embedding-component"}},"links":[{"source":"88b2-1","target":"88b2-2"},{"source":"88b2-1","target":"88b2-0"}],"env":{"rollup":"2.22.1","rollup-plugin-visualizer":"4.0.4"},"options":{"gzip":true,"brotli":false}};
+      const data = {"version":1,"tree":{"name":"index.min.js","children":[{"name":"package.json","uid":"f538-0"},{"name":"src","children":[{"name":"widget.js","uid":"f538-1"}]}]},"nodes":{"f538-0":{"renderedLength":58,"gzipLength":1127,"id":"package.json"},"f538-1":{"renderedLength":544,"isEntry":true,"gzipLength":351,"id":"src/widget.js"},"f538-2":{"renderedLength":0,"isExternal":true,"gzipLength":0,"id":"@scbd/self-embedding-component"}},"links":[{"source":"f538-1","target":"f538-2"},{"source":"f538-1","target":"f538-0"}],"env":{"rollup":"2.23.0","rollup-plugin-visualizer":"4.0.4"},"options":{"gzip":true,"brotli":false}};
 
       document.addEventListener('DOMContentLoaded', () => {
         const width = chartParameters.width || window.innerWidth;
