--- a/packages/search/stats-test-widget-widget-browser.html
+++ b/packages/search/stats-test-widget-widget-browser.html
@@ -2638,7 +2638,7 @@ main {
     </script>
     <script>
       const chartParameters = {};
-      const data = {"version":1,"tree":{"name":"index.min.js","children":[{"name":"package.json","uid":"45b9-0"},{"name":"tests","children":[{"name":"e2e","children":[{"name":"scaffolding","children":[{"name":"widget.js","uid":"45b9-1"}]}]}]}]},"nodes":{"45b9-0":{"renderedLength":58,"gzipLength":1125,"id":"package.json"},"45b9-1":{"renderedLength":794,"isEntry":true,"gzipLength":436,"id":"tests/e2e/scaffolding/widget.js"},"45b9-2":{"renderedLength":0,"isExternal":true,"gzipLength":0,"id":"@scbd/self-embedding-component"}},"links":[{"source":"45b9-1","target":"45b9-2"},{"source":"45b9-1","target":"45b9-0"}],"env":{"rollup":"2.21.0","rollup-plugin-visualizer":"4.0.4"},"options":{"gzip":true,"brotli":false}};
+      const data = {"version":1,"tree":{"name":"index.min.js","children":[{"name":"package.json","uid":"22fc-0"},{"name":"tests","children":[{"name":"e2e","children":[{"name":"scaffolding","children":[{"name":"widget.js","uid":"22fc-1"}]}]}]}]},"nodes":{"22fc-0":{"renderedLength":58,"gzipLength":1125,"id":"package.json"},"22fc-1":{"renderedLength":794,"isEntry":true,"gzipLength":436,"id":"tests/e2e/scaffolding/widget.js"},"22fc-2":{"renderedLength":0,"isExternal":true,"gzipLength":0,"id":"@scbd/self-embedding-component"}},"links":[{"source":"22fc-1","target":"22fc-2"},{"source":"22fc-1","target":"22fc-0"}],"env":{"rollup":"2.23.0","rollup-plugin-visualizer":"4.0.4"},"options":{"gzip":true,"brotli":false}};
 
       document.addEventListener('DOMContentLoaded', () => {
         const width = chartParameters.width || window.innerWidth;
